# libpm

./: CMakeLists.txt
examples/: CMakeLists.txt  simple_mining.cpp
include/procmine/: algorithm.h  database.h  log.h  models.h
src/: algorithm.cpp  database.cpp  log.cpp  models.cpp
tests/: CMakeLists.txt  algorithm_test.cpp  database_test.cpp  log_test.cpp
